--- a/src/main/resources/dev/glycine/pracstation/views/login.fxml
+++ b/src/main/resources/dev/glycine/pracstation/views/login.fxml
@@ -3,12 +3,62 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Polygon?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="login" prefHeight="600.0" prefWidth="400.0" stylesheets="@css/login.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.glycine.pracstation.controllers.LoginController">
    <children>
-      <JFXButton layoutX="173.0" layoutY="470.0" onMouseClicked="#login" text="&gt;" />
-      <PasswordField layoutX="111.0" layoutY="373.0" prefHeight="26.0" prefWidth="178.0" promptText="Password" />
-      <TextField layoutX="111.0" layoutY="300.0" prefHeight="26.0" prefWidth="178.0" promptText="Username" />
+      <JFXButton layoutX="173.0" layoutY="479.0" onMouseClicked="#login" text="login" />
+      <PasswordField layoutX="100.0" layoutY="375.0" prefHeight="26.0" prefWidth="200.0" promptText="Password" />
+      <TextField layoutX="100.0" layoutY="300.0" prefHeight="26.0" prefWidth="200.0" promptText="Username" />
+      <Polygon layoutX="213.0" layoutY="211.0" points="-86.0, -90.0, -17.0, 16.5, 42.0, -60.0" strokeLineJoin="ROUND" strokeWidth="20.0">
+         <fill>
+            <LinearGradient>
+               <stops>
+                  <Stop color="#216bff" />
+                  <Stop color="#ff00fb" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </fill>
+         <stroke>
+            <LinearGradient>
+               <stops>
+                  <Stop color="#216bff" />
+                  <Stop color="#ff00fb" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </stroke>
+      </Polygon>
+      <Polygon layoutX="200.0" layoutY="177.0" points="-50.0, 40.0, 42.0, 16.0, 0.0, -60.0" strokeLineJoin="ROUND" strokeWidth="20.0">
+         <fill>
+            <LinearGradient>
+               <stops>
+                  <Stop color="#1fc5ff" />
+                  <Stop color="#ff7ccd" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </fill>
+         <stroke>
+            <LinearGradient>
+               <stops>
+                  <Stop color="#1fc5ff" />
+                  <Stop color="#ff7dcf" offset="1.0" />
+               </stops>
+            </LinearGradient>
+         </stroke>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Polygon>
+      <Text layoutX="188.0" layoutY="182.0" stroke="BLACK" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="3.0" text="P" textAlignment="CENTER">
+         <font>
+            <Font size="40.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
