--- a/src/main/resources/dev/glycine/pracstation/views/main.fxml
+++ b/src/main/resources/dev/glycine/pracstation/views/main.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.Button?>
 <?import com.jfoenix.controls.JFXButton?>
+
+<?import javafx.scene.layout.FlowPane?>
 <AnchorPane fx:id="root" stylesheets="@css/main.css" xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.glycine.pracstation.controllers.MainController">
 
@@ -24,8 +26,9 @@
 
     <HBox styleClass="box" fx:id="topRightBox">
         <Card styleClass="btn-card">
-            <HBox styleClass="bottom-btn-group">
-                <JFXButton text="+" onMouseClicked="#createRoute"/>
+            <HBox styleClass="bottom-btn-group" alignment="CENTER_RIGHT">
+                <Label styleClass="focused-btn-label" fx:id="focusedBtnLabel" />
+                <JFXButton fx:id="newRouteBtn" onMouseClicked="#handleCreateRoute" />
             </HBox>
         </Card>
         <Card styleClass="btn-card">
@@ -36,20 +39,14 @@
                 <Button text="道岔解鎖" styleClass="common-button"/>
             </HBox>
         </Card>
-
-        <Card styleClass="btn-card">
-            <HBox styleClass="bottom-btn-group">
-                <Button text="總取消" styleClass="danger-button"/>
-                <Button text="總人解" styleClass="danger-button"/>
-                <Button text="區故解" styleClass="danger-button"/>
-            </HBox>
-        </Card>
     </HBox>
 
     <HBox styleClass="box" fx:id="bottomLeftBox">
     </HBox>
 
     <HBox styleClass="box" fx:id="bottomRightBox">
+        <Card labelText="進路" fx:id="routeCard">
+            <FlowPane fx:id="routePane" alignment="CENTER_RIGHT"/>
+        </Card>
     </HBox>
-
 </AnchorPane>
