--- a/src/main/resources/dev/glycine/pracstation/views/login.fxml
+++ b/src/main/resources/dev/glycine/pracstation/views/login.fxml
@@ -9,74 +9,72 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane fx:id="login" alignment="CENTER" prefHeight="400" prefWidth="600" stylesheets="@css/login.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.glycine.pracstation.controllers.LoginController">
+<GridPane fx:id="login" alignment="CENTER" prefHeight="400" prefWidth="600" stylesheets="@css/login.css"
+          xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="dev.glycine.pracstation.controllers.LoginController">
    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
    </rowConstraints>
-   <children>
-      <Polygon points="-86.0, -90.0, -17.0, 16.5, 42.0, -60.0" strokeLineJoin="ROUND" strokeWidth="20.0">
-         <fill>
-            <LinearGradient>
-               <stops>
-                  <Stop color="#216bff" />
-                  <Stop color="#ff00fb" offset="1.0" />
-               </stops>
-            </LinearGradient>
-         </fill>
-         <stroke>
-            <LinearGradient>
-               <stops>
-                  <Stop color="#216bff" />
-                  <Stop color="#ff00fb" offset="1.0" />
-               </stops>
-            </LinearGradient>
-         </stroke>
-      </Polygon>
-      <Polygon points="-50.0, 40.0, 42.0, 16.0, 0.0, -60.0" strokeLineJoin="ROUND" strokeWidth="20.0">
-         <fill>
-            <LinearGradient>
-               <stops>
-                  <Stop color="#1fc5ff" />
-                  <Stop color="#ff7ccd" offset="1.0" />
-               </stops>
-            </LinearGradient>
-         </fill>
-         <stroke>
-            <LinearGradient>
-               <stops>
-                  <Stop color="#1fc5ff" />
-                  <Stop color="#ff7dcf" offset="1.0" />
-               </stops>
-            </LinearGradient>
-         </stroke>
-         <effect>
-            <DropShadow />
-         </effect>
-      </Polygon>
-      <Text stroke="BLACK" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="3.0" text="P" textAlignment="CENTER">
-         <font>
-            <Font size="40.0" />
-         </font>
-      </Text>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
-         <children>
-            <VBox alignment="CENTER" spacing="50.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="100.0">
-               <children>
-                  <JFXTextField fx:id="username" promptText="username" style="-jfx-label-float:true;" />
-                  <JFXPasswordField fx:id="password" promptText="password" style="-jfx-label-float:true;" />
-               </children>
-            </VBox>
-            <JFXButton fx:id="loginBtn" alignment="CENTER" onMouseClicked="#login" text="login" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="20.0" />
-            <Label fx:id="warnText" layoutX="20.0" layoutY="288.0" />
-         </children>
-      </AnchorPane>
-      <Region prefHeight="200.0" prefWidth="200.0" />
-   </children>
    <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
    </padding>
+   <Polygon points="-86.0, -90.0, -17.0, 16.5, 42.0, -60.0" strokeLineJoin="ROUND" strokeWidth="20.0">
+      <fill>
+         <LinearGradient>
+            <stops>
+               <Stop color="#216bff"/>
+               <Stop color="#ff00fb" offset="1.0"/>
+            </stops>
+         </LinearGradient>
+      </fill>
+      <stroke>
+         <LinearGradient>
+            <stops>
+               <Stop color="#216bff"/>
+               <Stop color="#ff00fb" offset="1.0"/>
+            </stops>
+         </LinearGradient>
+      </stroke>
+   </Polygon>
+   <Polygon points="-50.0, 40.0, 42.0, 16.0, 0.0, -60.0" strokeLineJoin="ROUND" strokeWidth="20.0">
+      <fill>
+         <LinearGradient>
+            <stops>
+               <Stop color="#1fc5ff"/>
+               <Stop color="#ff7ccd" offset="1.0"/>
+            </stops>
+         </LinearGradient>
+      </fill>
+      <stroke>
+         <LinearGradient>
+            <stops>
+               <Stop color="#1fc5ff"/>
+               <Stop color="#ff7dcf" offset="1.0"/>
+            </stops>
+         </LinearGradient>
+      </stroke>
+      <effect>
+         <DropShadow/>
+      </effect>
+   </Polygon>
+   <Text stroke="BLACK" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="3.0" text="P" textAlignment="CENTER">
+      <font>
+         <Font size="40.0"/>
+      </font>
+   </Text>
+   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+      <VBox alignment="CENTER" spacing="50.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0"
+            AnchorPane.topAnchor="100.0">
+         <JFXTextField fx:id="username" promptText="username" style="-jfx-label-float:true;"/>
+         <JFXPasswordField fx:id="password" promptText="password" style="-jfx-label-float:true;"/>
+      </VBox>
+      <JFXButton fx:id="loginBtn" alignment="CENTER" onMouseClicked="#login" text="login"
+                 AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="20.0"/>
+      <Label fx:id="warnText" layoutX="20.0" layoutY="288.0"/>
+   </AnchorPane>
+   <Region prefHeight="200.0" prefWidth="200.0"/>
 </GridPane>
